--- a/hb/Views/BankAccounts/Create.cshtml
+++ b/hb/Views/BankAccounts/Create.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Bank Account</h2>
 
-<h4>BankAccount</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -26,6 +24,10 @@
                 <label asp-for="Balance" class="control-label"></label>
                 <input asp-for="Balance" class="form-control" />
                 <span asp-validation-for="Balance" class="text-danger"></span>
+            </div>
+             <div class="form-group">
+                <label asp-for="Currency" class="control-label"></label>
+                 <br /> <select asp-for="Currency.Id" asp-items="@Model.CurrencyList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
