--- a/hb/Views/BankAccounts/Index.cshtml
+++ b/hb/Views/BankAccounts/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<hb.Models.BankAccount>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Accounts List";
 }
 
-<h2>Index</h2>
+<h2>Accounts List</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,20 +12,24 @@
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Number)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Balance)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Number)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Balance)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Currency)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Number)
@@ -37,11 +41,14 @@
                 @Html.DisplayFor(modelItem => item.Balance)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Currency.CountryCode)
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+        }
     </tbody>
 </table>
