--- a/hb/Views/BankAccounts/Create.cshtml
+++ b/hb/Views/BankAccounts/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+   
 }
 
 <h2>Create Bank Account</h2>
@@ -12,7 +13,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Number" class="control-label"></label>
-                <input asp-for="Number" class="form-control" />
+                <input asp-for="Number" disabled class="form-control" />
+                @Html.HiddenFor(m => m.Number)
                 <span asp-validation-for="Number" class="text-danger"></span>
             </div>
             <div class="form-group">
