--- a/hb/Views/Transactions/Create.cshtml
+++ b/hb/Views/Transactions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model hb.Models.Transaction
+﻿@model hb.Models.TransactionViewModels.CreateTransaction
 
 @{
     ViewData["Title"] = "Create";
@@ -13,19 +13,27 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <label asp-for="Transaction.Date" class="control-label"></label>
+                <input asp-for="Transaction.Date" class="form-control" />
+                <span asp-validation-for="Transaction.Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="Transaction.Title" class="control-label"></label>
+                <input asp-for="Transaction.Title" class="form-control" />
+                <span asp-validation-for="Transaction.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sum" class="control-label"></label>
-                <input asp-for="Sum" class="form-control" />
-                <span asp-validation-for="Sum" class="text-danger"></span>
+                <label asp-for="Transaction.Sum" class="control-label"></label>
+                <input asp-for="Transaction.Sum" class="form-control" />
+                <span asp-validation-for="Transaction.Sum" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Recipients.Recipient" class="control-label"></label>
+                <br /> <select asp-for="Recipients.Recipient" asp-items="@Model.RecipientsList"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="BankAccount.B" class="control-label"></label>
+                <br /> <select asp-for="BankAccounts.Number" asp-items="@Model.BankAccountsList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
