--- a/hb/Views/Transactions/Create.cshtml
+++ b/hb/Views/Transactions/Create.cshtml
@@ -13,53 +13,44 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Transaction.Date" class="control-label"></label>
-                <input asp-for="Transaction.Date" class="form-control" />
-                <span asp-validation-for="Transaction.Date" class="text-danger"></span>
+                <label asp-for="SenderBankAccountId" class="control-label"></label>
+                <br /> <select asp-for="SenderBankAccountId" asp-items="@Model.SenderBankAccountsList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Transaction.Title" class="control-label"></label>
-                <input asp-for="Transaction.Title" class="form-control" />
-                <span asp-validation-for="Transaction.Title" class="text-danger"></span>
+                <label asp-for="Date" class="control-label"></label>
+                <input asp-for="Date" class="form-control" />
+                <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Transaction.Sum" class="control-label"></label>
-                <input asp-for="Transaction.Sum" class="form-control" />
-                <span asp-validation-for="Transaction.Sum" class="text-danger"></span>
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewRecipient" class="control-label"></label>
-                <input asp-for="NewRecipient" class="form-control" />
-                <span asp-validation-for="NewRecipient" class="text-danger"></span>
+                <label asp-for="Sum" class="control-label"></label>
+                <input asp-for="Sum" class="form-control" />
+                <span asp-validation-for="Sum" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BankAccounts.Number" class="control-label"></label>
-                <br /> <select asp-for="BankAccounts.Number" asp-items="@Model.SenderBankAccountsList"></select>
-            </div>
-            @*<div class="form-group">
-            <label asp-for="NewBankAccount" class="control-label"></label>
-            <input asp-for="NewBankAccount" class="form-control" />
-            <span asp-validation-for="NewBankAccount" class="text-danger"></span>
-        </div>*@
-            <br />
-            <h4>Predefined Recipient?</h4>
-            <div class="form-group">
-                <label asp-for="Recipients.Recipient" class="control-label"></label>
-                <br /> <select asp-for="Recipients.Recipient" asp-items="@Model.RecipientsList"></select>
+                <label asp-for="RecipientUniqueName" class="control-label"></label>
+                <input asp-for="RecipientUniqueName" class="form-control" />
+                <span asp-validation-for="RecipientUniqueName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BankAccounts.Number" class="control-label"></label>
-                <br /> <select asp-for="BankAccounts.Number" asp-items="@Model.BankAccountsList"></select>
+                <label asp-for="RecipientBankAccount" class="control-label"></label>
+                <input asp-for="RecipientBankAccount" class="form-control" />
+                <span asp-validation-for="RecipientBankAccount" class="text-danger"></span>
             </div>
+            <hr />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List of Transactions</a>
 </div>
 
 @section Scripts {
