Added [Authorized] for Controllers + Additional changes for Views.

--- a/hb/Views/BankAccounts/Index.cshtml
+++ b/hb/Views/BankAccounts/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Accounts List";
 }
 
-<h2>Accounts List</h2>
+<h2>Your Accounts List</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary btn-block">Create New Account</a>
 </p>
 <div id="data">
     <table class="table table-striped">
