Small fixes for Views.

--- a/hb/Views/Home/Index.cshtml
+++ b/hb/Views/Home/Index.cshtml
@@ -83,9 +83,7 @@
             </ul>
         </div>*@
     <br>
-    <br>
-    <br>
-    <p>
+    <p style="padding-left:30pt">
         <strong style="font-size: 110px; color:dimgray">SAVE YOUR MONEY WITH US!!!</strong>
         <span style="font-size: 110px;">
             <button class="btn btn-primary btn-lg" style="font-size: 80px; padding-top:-30pt">
