--- a/hb/Views/Transactions/Create.cshtml
+++ b/hb/Views/Transactions/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SenderBankAccountId" class="control-label"></label>
-                <br /> <select asp-for="SenderBankAccountId" asp-items="@Model.SenderBankAccountsList"></select>
+                <br /> <select asp-for="SenderBankAccountId" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" asp-items="@Model.SenderBankAccountsList"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
@@ -44,13 +44,12 @@
             <hr />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-success" />
+                <span style="padding-left:15pt;"><a class="btn btn-default" asp-action="Index">Back to List of Transactions</a></span>
             </div>
         </form>
+        <br />
+        <br />
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List of Transactions</a>
 </div>
 
 @section Scripts {
