--- a/hb/Views/Shared/_Layout.cshtml
+++ b/hb/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                     <li><a asp-area="" asp-controller="BankAccounts" asp-action="Index">Your Accounts</a></li>
                     <li><a asp-area="" asp-controller="Transactions" asp-action="Index">Transactions</a></li>
+                    <li><a asp-area="" asp-controller="RecipientLists" asp-action="Index">Recipients List</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
